# Simple9SliceScale

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  my_window.cpp  my_window.h  simple_9_slice.cpp  simple_9_slice.h
src/res/: shader.frag  shader.vert
